--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -5,10 +5,17 @@ jobs:
   FirstJob:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Test Workflow"
-      - name: Build and Push dockerimage
+      - 
+        name: Login to github registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.REGISTRYTOKEN }}
+      - 
+        name: Build and Push dockerimage
         uses: docker/build-push-action@v3
         with:
           file: src/DockerFiles/TestHelloWorld.dockerfile
           push: true
-          tags: test-image:latest
+          tags: ghcr.io/user/test-image:latest
