change user to my github username

--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -18,4 +18,4 @@ jobs:
         with:
           file: src/DockerFiles/TestHelloWorld.dockerfile
           push: true
-          tags: ghcr.io/user/test-image:latest
+          tags: ghcr.io/sebreiro/test-image:latest
