--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -11,11 +11,11 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.REGISTRYTOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - 
         name: Build and Push dockerimage
         uses: docker/build-push-action@v3
         with:
           file: src/DockerFiles/TestHelloWorld.dockerfile
           push: true
-          tags: ghcr.io/sebreiro/test-image:latest
+          tags: ghcr.io/${{ github.repository_owner }}/test-image:latest
