--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -6,6 +6,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - 
+        name: set lower case owner name
+        run: |
+          echo "REPOSITORY_LC=${REPOSITORY,,}" >>${GITHUB_ENV}
+        env:
+          REPOSITORY: '${{ github.repository_owner }}'
+      - 
         name: Login to github registry
         uses: docker/login-action@v2
         with:
@@ -18,4 +24,4 @@ jobs:
         with:
           file: src/DockerFiles/TestHelloWorld.dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository }}/test-image:latest
+          tags: ghcr.io/${{ REPOSITORY_LC }}/test-image:latest
