Try to use REPOSITORY_LC variable

--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -25,4 +25,4 @@ jobs:
         with:
           file: src/DockerFiles/TestHelloWorld.dockerfile
           push: true
-          tags: ghcr.io/ $REPOSITORY_LC /test-image:latest
+          tags: ghcr.io/${{ REPOSITORY_LC }}/test-image:latest
