Print tag name via echo

--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -23,7 +23,7 @@ jobs:
         run: env
       -
         name: Show current tag
-        run: ${{github.ref_name}}
+        run: echo "${{ github.ref_name }}"
       - 
         name: Build and Push dockerimage
         uses: docker/build-push-action@v3
