Try add checkout

--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -5,6 +5,9 @@ jobs:
   FirstJob:
     runs-on: ubuntu-latest
     steps:
+      -
+        name: Check out repository code
+        uses: actions/checkout@v3
       - 
         name: set lower case repository name
         run: |
