--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -33,4 +33,6 @@ jobs:
         with:
           file: src/DockerFiles/TestHelloWorld.dockerfile
           push: true
-          tags: ghcr.io/${{ env.REPOSITORY_LC }}/test-image:latest
+          tags: | 
+            ghcr.io/${{ env.REPOSITORY_LC }}/test-image:latest
+            ghcr.io/${{ env.REPOSITORY_LC }}/test-image:${{ github.ref_name }}
