--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -35,4 +35,5 @@ jobs:
           push: true
           tags: | 
             ghcr.io/${{ env.REPOSITORY_LC }}/test-image:latest
-            ghcr.io/${{ env.REPOSITORY_LC }}/test-image:${{ github.ref_name }}
+            ghcr.io/${{ env.REPOSITORY_LC }}/test-image:${{ github.ref }}
+            ghcr.io/${{ env.REPOSITORY_LC }}/test-image:other-tag
