--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -34,6 +34,6 @@ jobs:
           file: src/DockerFiles/TestHelloWorld.dockerfile
           push: true
           tags: | 
-            ghcr.io/${{ env.REPOSITORY_LC }}/test-image:latest
-            ghcr.io/${{ env.REPOSITORY_LC }}/test-image:${{ github.ref_name }}
-            ghcr.io/${{ env.REPOSITORY_LC }}/test-image:other-tag
+            ghcr.io/${{ env.REPOSITORY_LC }}:latest
+            ghcr.io/${{ env.REPOSITORY_LC }}:${{ github.ref_name }}
+            ghcr.io/${{ env.REPOSITORY_LC }}:other-tag
